# karyon

./: .gitignore  AGENTS.md  GEMINI.md  Makefile  PLAN.md  README.md  SPEC.md  TASKS.md  chat.xml  chat2.xml  chat3.xml  chat4.xml  compose.yml  doc-refine.txt  gpt-export-2026-04-02.md  package-lock.json  package.json
app/: .gitignore  mix.exs
app/config/: dev.exs  (+4 more)
app/native/karyon_nif/: Cargo.toml
app/native/karyon_nif/src/: lib.rs
app/rhizome/native/rhizome_nif/: Cargo.toml
app/rhizome/native/rhizome_nif/src/: client.rs  lib.rs  memgraph.rs  optimizer.rs  resource.rs  tests.rs  xtdb.rs
app/rhizome/native/rhizome_nif/tests/: memory_leak_test.rs  native_test.rs  pressure_test.rs
app/sensory/native/sensory_nif/: Cargo.toml
app/sensory/native/sensory_nif/src/: lib.rs
app/sensory/native/sensory_nif/tests/: native_test.rs
docs/: .env.local.example  .gitignore  README.md  astro.config.mjs  compose.yml  package-lock.json  package.json  treeseed.site.yaml  tsconfig.json  wrangler.toml
research/: 1.2-Transformer-Limitations-and-AI-Architectures.md  1.3-Continuous-Learning-Limits-in-Dense-Transformers.md  1.4-AI-Architecture-Research-Synthesis.md  10.2-AI-Cognitive-Architecture-Research-Synthesis.md  10.3-AI-Self-Preservation-and-Conversational-Decay.md  10.4-AI-Orchestrator-Research-Synthesis.md  11.2-Elixir-Rust-NIF-Optimization-Research.md  11.3-Distributed-Systems-Observability-Research.md  11.4-AI-Reasoning-Graph-Memory-Decoupling.md  12.2-Graph-Based-AI-Code-Parsing-Research.md  12.3-Autonomous-AI-Execution-Feedback-Research.md  12.4-AI-Exploration-Active-Inference-Adversarial-Curricula.md  12.5-Software-Architecture-Drift-Detection-Research.md  2.2-Asynchronous-AI-Architectures-Research-Synthesis.md  2.3-Active-Inference-AI-Research-Synthesis.md  2.4-AI-Abstraction-Memory-and-Embodiment-Research.md  2.5-AI-Plasticity-Memory-and-Hardware-Bottlenecks.md  3.2-Karyon-Architecture-Research-Synthesis.md  3.3-BEAM-VM-Extreme-Vertical-Scaling-Research.md  3.4-Rust-NIFs-in-Erlang-VM-Research.md  3.5-MicroVMs-Virtio-fs-and-Code-Execution.md  3.6-Ultra-Low-Latency-Distributed-Systems-Research.md  4.2-Actor-AI-Declarative-Specialization-Research.md  4.3-Bio-Inspired-Actor-Model-Research-Synthesis.md  4.4-Bio-Inspired-Distributed-Systems-Research.md  5.2-AI-Architectures-Dense-vs-Sparse.md  5.3-Dual-Layer-Graph-Memory-Biomimicry.md  (+14 more)
(+589 files in other folders)
