[package]
name = "rhizome_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "rhizome_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.34.0"
tree-sitter = "0.20.10"
tree-sitter-json = "0.20.2"
neo4rs = "0.7.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
